# AI-App-Store

./: Cargo.toml  README.md  permissions.db  supply_chain_q1.txt
src/: cli.rs  db.rs  lib.rs  main.rs
